rewrite JWT schema
